fm-package/src/main/java/at/tugraz/ist/ase/hiconfit/fm/parser/fm4conf/FM4ConfParser.java
/*
 * High Performance Knowledge Based Configuration Techniques
 *
 * Copyright (c) 2024
 *
 * @author: Viet-Man Le (vietman.le@ist.tugraz.at)
 */

// Generated from /Users/manleviet/Development/HiConfiT/hiconfit-core/fm-package/src/main/java/at/tugraz/ist/ase/hiconfit/fm/parser/fm4conf/FM4Conf.g4 by ANTLR 4.13.1
package at.tugraz.ist.ase.hiconfit.fm.parser.fm4conf;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FM4ConfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FM4CONFversion=1, MODELNAME=2, FEATURE=3, RELATIONSHIP=4, CONSTRAINT=5, 
		MANDATORY=6, OPTIONAL=7, ALTERNATIVE=8, OR=9, REQUIRES=10, EXCLUDES=11, 
		NOT_OPT=12, AND_OPT=13, OR_OPT=14, CM=15, SC=16, CL=17, LP=18, RP=19, 
		NAME=20, COMMENT=21, WS=22;
	public static final int
		RULE_model = 0, RULE_fm4confver = 1, RULE_modelname = 2, RULE_feature = 3, 
		RULE_relationship = 4, RULE_constraint = 5, RULE_identifier = 6, RULE_relationshiprule = 7, 
		RULE_constraintrule = 8, RULE_cnfrule = 9, RULE_element = 10, RULE_logic_operator = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "fm4confver", "modelname", "feature", "relationship", "constraint", 
			"identifier", "relationshiprule", "constraintrule", "cnfrule", "element", 
			"logic_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'FM4Conf-v1.0'", "'MODEL'", "'FEATURES'", "'RELATIONSHIPS'", "'CONSTRAINTS'", 
			"'mandatory'", "'optional'", "'alternative'", "'or'", "'requires'", "'excludes'", 
			"'~'", "'/\\'", "'\\/'", "','", "';'", "':'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FM4CONFversion", "MODELNAME", "FEATURE", "RELATIONSHIP", "CONSTRAINT", 
			"MANDATORY", "OPTIONAL", "ALTERNATIVE", "OR", "REQUIRES", "EXCLUDES", 
			"NOT_OPT", "AND_OPT", "OR_OPT", "CM", "SC", "CL", "LP", "RP", "NAME", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FM4Conf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FM4ConfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModelContext extends ParserRuleContext {
		public Fm4confverContext fm4confver() {
			return getRuleContext(Fm4confverContext.class,0);
		}
		public ModelnameContext modelname() {
			return getRuleContext(ModelnameContext.class,0);
		}
		public FeatureContext feature() {
			return getRuleContext(FeatureContext.class,0);
		}
		public RelationshipContext relationship() {
			return getRuleContext(RelationshipContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			fm4confver();
			setState(25);
			modelname();
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEATURE) {
				{
				setState(26);
				feature();
				}
			}

			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RELATIONSHIP) {
				{
				setState(29);
				relationship();
				}
			}

			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTRAINT) {
				{
				setState(32);
				constraint();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fm4confverContext extends ParserRuleContext {
		public TerminalNode FM4CONFversion() { return getToken(FM4ConfParser.FM4CONFversion, 0); }
		public Fm4confverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fm4confver; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterFm4confver(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitFm4confver(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitFm4confver(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fm4confverContext fm4confver() throws RecognitionException {
		Fm4confverContext _localctx = new Fm4confverContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fm4confver);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(FM4CONFversion);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModelnameContext extends ParserRuleContext {
		public TerminalNode MODELNAME() { return getToken(FM4ConfParser.MODELNAME, 0); }
		public TerminalNode CL() { return getToken(FM4ConfParser.CL, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ModelnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterModelname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitModelname(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitModelname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelnameContext modelname() throws RecognitionException {
		ModelnameContext _localctx = new ModelnameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_modelname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(MODELNAME);
			setState(38);
			match(CL);
			setState(39);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureContext extends ParserRuleContext {
		public TerminalNode FEATURE() { return getToken(FM4ConfParser.FEATURE, 0); }
		public TerminalNode CL() { return getToken(FM4ConfParser.CL, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> CM() { return getTokens(FM4ConfParser.CM); }
		public TerminalNode CM(int i) {
			return getToken(FM4ConfParser.CM, i);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitFeature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitFeature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_feature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(FEATURE);
			setState(42);
			match(CL);
			setState(43);
			identifier();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CM) {
				{
				{
				setState(44);
				match(CM);
				setState(45);
				identifier();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationshipContext extends ParserRuleContext {
		public TerminalNode RELATIONSHIP() { return getToken(FM4ConfParser.RELATIONSHIP, 0); }
		public TerminalNode CL() { return getToken(FM4ConfParser.CL, 0); }
		public List<RelationshipruleContext> relationshiprule() {
			return getRuleContexts(RelationshipruleContext.class);
		}
		public RelationshipruleContext relationshiprule(int i) {
			return getRuleContext(RelationshipruleContext.class,i);
		}
		public List<TerminalNode> CM() { return getTokens(FM4ConfParser.CM); }
		public TerminalNode CM(int i) {
			return getToken(FM4ConfParser.CM, i);
		}
		public RelationshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationship; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterRelationship(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitRelationship(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitRelationship(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationshipContext relationship() throws RecognitionException {
		RelationshipContext _localctx = new RelationshipContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relationship);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(RELATIONSHIP);
			setState(52);
			match(CL);
			setState(53);
			relationshiprule();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CM) {
				{
				{
				setState(54);
				match(CM);
				setState(55);
				relationshiprule();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintContext extends ParserRuleContext {
		public TerminalNode CONSTRAINT() { return getToken(FM4ConfParser.CONSTRAINT, 0); }
		public TerminalNode CL() { return getToken(FM4ConfParser.CL, 0); }
		public List<ConstraintruleContext> constraintrule() {
			return getRuleContexts(ConstraintruleContext.class);
		}
		public ConstraintruleContext constraintrule(int i) {
			return getRuleContext(ConstraintruleContext.class,i);
		}
		public List<TerminalNode> CM() { return getTokens(FM4ConfParser.CM); }
		public TerminalNode CM(int i) {
			return getToken(FM4ConfParser.CM, i);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constraint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(CONSTRAINT);
			setState(62);
			match(CL);
			setState(63);
			constraintrule();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CM) {
				{
				{
				setState(64);
				match(CM);
				setState(65);
				constraintrule();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(FM4ConfParser.NAME, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationshipruleContext extends ParserRuleContext {
		public RelationshipruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationshiprule; }
	 
		public RelationshipruleContext() { }
		public void copyFrom(RelationshipruleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrContext extends RelationshipruleContext {
		public TerminalNode OR() { return getToken(FM4ConfParser.OR, 0); }
		public TerminalNode LP() { return getToken(FM4ConfParser.LP, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode RP() { return getToken(FM4ConfParser.RP, 0); }
		public List<TerminalNode> CM() { return getTokens(FM4ConfParser.CM); }
		public TerminalNode CM(int i) {
			return getToken(FM4ConfParser.CM, i);
		}
		public OrContext(RelationshipruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitOr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AlternativeContext extends RelationshipruleContext {
		public TerminalNode ALTERNATIVE() { return getToken(FM4ConfParser.ALTERNATIVE, 0); }
		public TerminalNode LP() { return getToken(FM4ConfParser.LP, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode RP() { return getToken(FM4ConfParser.RP, 0); }
		public List<TerminalNode> CM() { return getTokens(FM4ConfParser.CM); }
		public TerminalNode CM(int i) {
			return getToken(FM4ConfParser.CM, i);
		}
		public AlternativeContext(RelationshipruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitAlternative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitAlternative(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OptionalContext extends RelationshipruleContext {
		public TerminalNode OPTIONAL() { return getToken(FM4ConfParser.OPTIONAL, 0); }
		public TerminalNode LP() { return getToken(FM4ConfParser.LP, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode CM() { return getToken(FM4ConfParser.CM, 0); }
		public TerminalNode RP() { return getToken(FM4ConfParser.RP, 0); }
		public OptionalContext(RelationshipruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterOptional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitOptional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitOptional(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MandatoryContext extends RelationshipruleContext {
		public TerminalNode MANDATORY() { return getToken(FM4ConfParser.MANDATORY, 0); }
		public TerminalNode LP() { return getToken(FM4ConfParser.LP, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode CM() { return getToken(FM4ConfParser.CM, 0); }
		public TerminalNode RP() { return getToken(FM4ConfParser.RP, 0); }
		public MandatoryContext(RelationshipruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterMandatory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitMandatory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitMandatory(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationshipruleContext relationshiprule() throws RecognitionException {
		RelationshipruleContext _localctx = new RelationshipruleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_relationshiprule);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MANDATORY:
				_localctx = new MandatoryContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(MANDATORY);
				setState(74);
				match(LP);
				setState(75);
				identifier();
				setState(76);
				match(CM);
				setState(77);
				identifier();
				setState(78);
				match(RP);
				}
				break;
			case OPTIONAL:
				_localctx = new OptionalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				match(OPTIONAL);
				setState(81);
				match(LP);
				setState(82);
				identifier();
				setState(83);
				match(CM);
				setState(84);
				identifier();
				setState(85);
				match(RP);
				}
				break;
			case ALTERNATIVE:
				_localctx = new AlternativeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(ALTERNATIVE);
				setState(88);
				match(LP);
				setState(89);
				identifier();
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(90);
					match(CM);
					setState(91);
					identifier();
					}
					}
					setState(94); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CM );
				setState(96);
				match(RP);
				}
				break;
			case OR:
				_localctx = new OrContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				match(OR);
				setState(99);
				match(LP);
				setState(100);
				identifier();
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					match(CM);
					setState(102);
					identifier();
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CM );
				setState(107);
				match(RP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintruleContext extends ParserRuleContext {
		public ConstraintruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraintrule; }
	 
		public ConstraintruleContext() { }
		public void copyFrom(ConstraintruleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExcludesContext extends ConstraintruleContext {
		public TerminalNode EXCLUDES() { return getToken(FM4ConfParser.EXCLUDES, 0); }
		public TerminalNode LP() { return getToken(FM4ConfParser.LP, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode CM() { return getToken(FM4ConfParser.CM, 0); }
		public TerminalNode RP() { return getToken(FM4ConfParser.RP, 0); }
		public ExcludesContext(ConstraintruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterExcludes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitExcludes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitExcludes(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CnfContext extends ConstraintruleContext {
		public CnfruleContext cnfrule() {
			return getRuleContext(CnfruleContext.class,0);
		}
		public CnfContext(ConstraintruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterCnf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitCnf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitCnf(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RequiresContext extends ConstraintruleContext {
		public TerminalNode REQUIRES() { return getToken(FM4ConfParser.REQUIRES, 0); }
		public TerminalNode LP() { return getToken(FM4ConfParser.LP, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode CM() { return getToken(FM4ConfParser.CM, 0); }
		public TerminalNode RP() { return getToken(FM4ConfParser.RP, 0); }
		public RequiresContext(ConstraintruleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).enterRequires(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FM4ConfListener ) ((FM4ConfListener)listener).exitRequires(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FM4ConfVisitor ) return ((FM4ConfVisitor<? extends T>)visitor).visitRequires(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintruleContext constraintrule() throws RecognitionException {
		ConstraintruleContext _localctx = new ConstraintruleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constraintrule);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REQUIRES:
				_localctx = new RequiresContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(REQUIRES);
				setState(112);
				match(LP);
				setState(113);
				identifier();
				setState(114);
				match(CM);
				setState(115);
				identifier();
				setState(116);
				match(RP);
				}
				break;
			case EXCLUDES:
				_localctx = new ExcludesContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(EXCLUDES);
				setState(119);
				match(LP);
				setState(120);
				identifier();
				setState(121);
				match(CM);
				setState(122);
				identifier();
				setState(123);
				match(RP);
				}
				break;
			case NOT_OPT:
			case LP:
			case NAME:
				_localctx = new CnfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				cnfrule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
